--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -65,7 +65,7 @@ jobs:
       with:
         envs: 'CONAN_MAKE_PROGRAM CC CXX CONAN_SYSREQUIRES_MODE'
         usesh: true
-        prepare: pkg install -y cmake py37-pip py37-sqlite3 sudo pkgconf gmake
+        prepare: pkg install -y cmake py37-pip py37-sqlite3 sudo pkgconf gmake bash
         run: |
           pip install conan
           conan create CCI/recipes/${{ matrix.package }}/${{ matrix.folder }} ${{ matrix.package }}/${{ matrix.version }}@ -b missing
