--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -66,7 +66,7 @@ jobs:
       with:
         envs: 'CONAN_MAKE_PROGRAM CC CXX CONAN_SYSREQUIRES_MODE MAKE'
         usesh: true
-        prepare: pkg install -y cmake py37-pip py37-sqlite3 python3 sudo pkgconf gmake bash perl5 && ln -s /usr/local/bin/perl /usr/bin/perl
+        prepare: pkg install -y cmake py37-pip py37-sqlite3 python3 sudo pkgconf gmake bash perl5 p5-XML-Parser && ln -s /usr/local/bin/perl /usr/bin/perl
         run: |
           pip install conan
           conan create CCI/recipes/${{ matrix.package }}/${{ matrix.folder }} ${{ matrix.package }}/${{ matrix.version }}@ -b missing
