--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -41,6 +41,7 @@ jobs:
   
   FreeBSD:
     needs: generate-matrix
+    if: ${{ fromJSON( needs.generate-matrix.outputs.matrix ).include[0] }}
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.generate-matrix.outputs.matrix)}}
