--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: run lint
-        run: python3 runlint.py
+        run: python3 runlint.py ${{ github.event.pull_request.number }}
