--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,18 @@ name: run linters
 on:
   pull_request:
   workflow_dispatch:
-  
+
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   lint:
+    env:
+      CONAN_YAMLLINT_WERR: 1
+      CONAN_PYLINT_WERR: 1
     strategy:
+      fail-fast: false
       matrix:
         hook: ["yaml_linter", "recipe_linter"]
     # The type of runner that the job will run on
@@ -26,8 +30,8 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: "3.8"
-          
-      - run: "pip3 install conan yamllint packaging"
+
+      - run: "pip3 install conan yamllint packaging pylint astroid"
 
       # Runs a single command using the runners shell
       - name: install hook
