--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -46,7 +46,7 @@ jobs:
       fail-fast: false
       matrix: ${{fromJson(needs.generate-matrix.outputs.matrix)}}
       
-    runs-on: macos-latest
+    runs-on: macos-10.15
 
     env:
       CONAN_MAKE_PROGRAM: "gmake"
